src/tui/snapshots/reflect__tui__app__tests__meeting modal long name.snap
---
source: src/tui/app.rs
expression: terminal.backend()
---
" Todo List │ Meetings │ Reflections │ Summaries                                 "
"┌Meetings──────────────────────────────────────────────────────────────────────┐"
"│Name                  Scheduled          Created            Updated           │"
"│Standup               2024-01-15 10:30   2024-01-15 10:30   2024-01-15 10:30  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│         ┌Add Meeting───────────────────────────────────────────────┐         │"
"│         │                                                          │         │"
"│         │ Name: an extraordinarily verbose meeting title that over │         │"
"│         │       flows the modal inner width and therefore wraps█   │         │"
"│         │                                                          │         │"
"│         │ When: 2024-01-15 10:30                                   │         │"
"│         │                                                          │         │"
"│         └──────────────────────────────────────────────────────────┘         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
