src/tui/snapshots/reflect__tui__app__tests__meetings view.snap
---
source: src/tui/app.rs
expression: terminal.backend()
---
" Todo List │ Meetings │ Reflections                                             "
"┌Meetings──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                    ██   █   ██ █  █      █                                   │"
"│                    █ █ █ █  █  █ █ █     █  █          █                     │"
"│                    ██  ███ ███ █ ███  █ ███    █   █  █                      │"
"│                    █ █ █    █  █ █   █   █  █ █ █ █ █  █                     │"
"│                    █ █  ██  █  █  ██  █  █  █  █  █ █ █                      │"
"│                                                                              │"
"│                    v1.0.0 — by Peter Vlasveld                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
