src/tui/snapshots/reflect__tui__app__tests__modal open overflow.snap
---
source: src/tui/app.rs
expression: terminal.backend()
---
" Todo List │ Meetings │ Reflections │ Summaries                                 "
"┌TODO List─────────────────────────────────────────────────────────────────────┐"
"│Status       Label                       Created            Updated           │"
"│NEW          buy groceries               2024-01-15 10:30   2024-01-15 10:30  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│         ┌Add Todo Item─────────────────────────────────────────────┐         │"
"│         │this is a very long todo item description that keeps going│         │"
"│         │ well past the inner width of the modal so the text must w│         │"
"│         │rap onto multiple lines█                                  │         │"
"│         └──────────────────────────────────────────────────────────┘         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
