src/tui/snapshots/reflect__tui__app__tests__new default app open.snap
---
source: src/tui/app.rs
expression: terminal.backend()
---
" Todo List │ Meetings │ Reflections                                             "
"┌TODO List─────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                    ██   █   ██ █  █      █                                   │"
"│                    █ █ █ █  █  █ █ █     █  █          █                     │"
"│                    ██  ███ ███ █ ███  █ ███    █   █  █                      │"
"│                    █ █ █    █  █ █   █   █  █ █ █ █ █  █                     │"
"│                    █ █  ██  █  █  ██  █  █  █  █  █ █ █                      │"
"│                                                                              │"
"│                    v0.9.1 — by Peter Vlasveld                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
