src/tui/snapshots/reflect__tui__app__tests__populated meetings.snap
---
source: src/tui/app.rs
expression: terminal.backend()
---
" Todo List │ Meetings │ Reflections │ Summaries                                 "
"┌Meetings──────────────────────────────────────────────────────────────────────┐"
"│Name                  Scheduled          Created            Updated           │"
"│Standup               2024-01-15 10:30   2024-01-15 10:30   2024-01-15 10:30  │"
"│Retro                 2024-01-15 10:30   2024-01-15 10:30   2024-01-15 10:30  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
