src/tui/snapshots/reflect__tui__app__tests__populated todo list.snap
---
source: src/tui/app.rs
assertion_line: 170
expression: terminal.backend()
---
"┌TODO List─────────────────────────────────────────────────────────────────────┐"
"│[New] buy groceries — 2024-01-15 05:30                                        │"
"│[New] write tests — 2024-01-15 05:30                                          │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
