src/tui/snapshots/reflect__tui__app__tests__reflection detail view.snap
---
source: src/tui/app.rs
expression: terminal.backend()
---
"┌Reflection────────────────────────────────────────────────────────────────────┐"
"│# Reflection                                                                  │"
"│                                                                              │"
"│Content here                                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
