src/tui/snapshots/reflect__tui__app__tests__reflections view.snap
---
source: src/tui/app.rs
expression: terminal.backend()
---
" Todo List │ Meetings │ Reflections                                             "
"┌Reflections───────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                    ██   █   ██ █  █      █                                   │"
"│                    █ █ █ █  █  █ █ █     █  █          █                     │"
"│                    ██  ███ ███ █ ███  █ ███    █   █  █                      │"
"│                    █ █ █    █  █ █   █   █  █ █ █ █ █  █                     │"
"│                    █ █  ██  █  █  ██  █  █  █  █  █ █ █                      │"
"│                                                                              │"
"│                    v0.8.1 — by Peter Vlasveld                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
